src/objects/Server_Configuration__c.object
<CustomObject>
    <description>Constants that our Apex code needs to use when retrieving data from our backend survey and search databases.</description>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>Back end base URL</description>
        <inlineHelpText>Base URL</inlineHelpText>
        <label>Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Database__c</fullName>
        <label>Search Database</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Path__c</fullName>
        <description>Path to Search Servlet Base in Backend</description>
        <inlineHelpText>Search Path</inlineHelpText>
        <label>Search Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Path__c</fullName>
        <description>Path to Search Servlet base in Backend.</description>
        <label>Services Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Database__c</fullName>
        <label>Survey Database</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Server Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Server Constants Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Server Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>